2003-12-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* dc210.c: status = TESTING

2003-10-12  Marcus Meissner <marcus@jet.franken.de>
	
	  From Joe R <vinnyjojo@yahoo.com>
	* dc210.c: GP_OPERATION_CAPTURE_IMAGE -> GP_CAPTURE_IMAGE typo.

2002-10-25  Michael Koltan <koltan@gmx.de>

	* Rewrote the initialization procedure
	  again to use the speed parameter
	  set by gphoto2

	* Allowed timeout errors when 
	  capturing a picture; that's for Koen, who
	  has strange communication drops in his
	  setup

2002-10-20  Michael Koltan <koltan@gmx.de>

	* Improved error recovery on package read
	  timeout when downloading file from camera
	+ Corrected error in battery status / ac
	  adaptor connection. Reading of battery
	  status still doesn't work, so took the
	  unreliable display from summary

2002-09-10  Marcus Meissner <marcus@jet.franken.de>
	
	* Made exp_compensation a signed char, removed
	  exposure_compensation (unused).

2002-09-11  Michael Koltan  <koltan@gmx.de>

	* Removed the pseudo capture preview.
	  It's too slow for applications like
	  gtkam

2002-09-10  Marcus Meissner <marcus@jet.franken.de>
	
	* "xx mm" strings do not need to be translated.

2002-09-08  Michael Koltan <koltan@gmx.de>

	* Separated port initialization and speed
	  setting code
	* Corrected the reading of the card status
	* Improved card opening code
	* Added a pseudo capture preview (capture
	  to card, then download the data and
	  delete the picture on card)

2002-09-08  Michael Koltan <koltan@gmx.de>

	* Implemented reliable code for speed setting
	* Added battery check

2002-09-06  Michael Koltan <koltan@gmx.de>

	* Implemeted the named commands for displaying,
	  downloading and deleting of files
	* Added conversion for cfa bayer thumnails
	* Minor cleanups
	* Added TODO list

2002-09-01  Michel Koltan <koltan@gmx.de>

	* Added PREVIEW to file_operations


2002-08-24  Michael Koltan <koltan@gmx.de>

	* first version submitted for testing

